Updated GitHub links in index.html and removed commented-out code in app.js and projects.js for cleaner codebase.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                 <a href="https://www.linkedin.com/in/jamie-ogundiran-874aa3230/" class="social-icon" aria-label="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://github.com/JReal10" class="social-icon" aria-label="GitHub">
+                <a href="https://github.com/JamieOgundiran" class="social-icon" aria-label="GitHub">
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="mailto:jamieogundiran@gmail.com" class="social-icon" aria-label="Email">
@@ -75,7 +75,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                   Based in London and currently studying Artificial Intelligence at King’s College London, I specialize in developing AI-driven software that solves real-world problem. With hands-on experience in building AI agents, machine learning models, and user-centric applications—both personal and client-based—I bring a hybrid skill set that bridges engineering and design to deliver real-world solutions.</p>
                   <div class="button-container">
                     <!-- GitHub Button with GitHub colors -->
-                    <a href="https://github.com/JReal10" class="feature-button github-button">
+                    <a href="https://github.com/JamieOgundiran" class="feature-button github-button">
                       <div class="button-content">
                         <div class="icon-container">
                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
@@ -242,7 +242,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         <section class="contact-section">
           <h1><span class="orange-highlight">LET'S</span><br>CONNECT</h1>
           <form action="https://formsubmit.co/Jamieogundiran@gmail.com" method="POST" class="contact-form fade-in">
-            <!-- Protect from bots -->
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">  <div class="form-row">
             <div class="form-group">
