Update blog post on culturally aware AI with new title, content, and metadata; remove unused images and adjust data loader for post-specific images.

--- a/blog-post-building-culturally-aware-ai.html.html
+++ b/blog-post-building-culturally-aware-ai.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Future of AI Agents: Beyond Simple Automation - Jamie Ogundiran</title>
+    <title>Building Culturally Aware AI: Lessons from African Language Models - Jamie Ogundiran</title>
     <link rel="stylesheet" href="styles/blog-post.css">
     <link rel="stylesheet" href="styles/background.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -56,19 +56,19 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                     <a href="blog.html" class="breadcrumb-link">← Back to Blog</a>
                 </div>
                 <div class="blog-post-hero">
-                    <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&h=600&fit=crop&crop=center" 
-                         alt="The Future of AI Agents: Beyond Simple Automation" 
+                    <img src="images/social-psychology.png" 
+                         alt="Culturally aligned LLMs for low-resource African languages" 
                          class="blog-post-hero-image">
                 </div>
                 <div class="blog-post-meta">
-                    <span class="blog-post-category">AI Technology</span>
+                    <span class="blog-post-category">Research</span>
                     <div class="blog-post-info">
-                        <span class="blog-post-date">August 10, 2025</span>
-                        <span class="blog-post-read-time">5 min read</span>
+                        <span class="blog-post-date">August 7, 2025</span>
+                        <span class="blog-post-read-time">7 min read</span>
                     </div>
                 </div>
-                <h1 class="blog-post-title">The Future of AI Agents: Beyond Simple Automation</h1>
-                <p class="blog-post-excerpt">Exploring how AI agents are evolving from simple task automation to sophisticated reasoning systems that can handle complex, multi-step problems.</p>
+                <h1 class="blog-post-title">Building Culturally Aware AI: Lessons from African Language Models</h1>
+                <p class="blog-post-excerpt">Research on culturally aligned LLMs for low-resource African languages, leveraging value survey data to improve alignment and evaluation.</p>
             </header>
 
             <div class="blog-post-content">
