Fix typos and improve clarity in blog post on culturally aware AI, including corrections to language support statistics and fine-tuning techniques for low-resource African languages.

--- a/blog-post-building-culturally-aware-ai.html
+++ b/blog-post-building-culturally-aware-ai.html
@@ -75,24 +75,24 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 
                 <h2>The 98% Problem: Why Most of Africa is Left Behind in AI</h2>
                 <p>Over 2000 languages spoken across Africa, only about 42 receive any form of support in existing AI language models.</p>
-                <p>That means  98% of African languages are completley unsupported by the technology that's reshaping our world. This isn't just a technical oversight – it's a digital divide that's leaving entire communities behind in the AI revolution.</p>
+                <p>That means  98% of African languages are completely unsupported by the technology that's reshaping our world. This isn't just a technical oversight – it's a digital divide that's leaving entire communities behind in the AI revolution.</p>
                 <p>While English speakers benefit from AI assistants that understand context, culture, and nuance, African language speakers face AI systems that misunderstand their cultural values. This gap doesn't just limit access to technology; it actively perpetuates bias and misinformation while denying communities crucial economic and educational opportunities.</p>
                 
-                <h2>There's a urgent need for a novel finetuning technique for low resource African languages</h2>
+                <h2>There is an urgent need for a novel fine-tuning technique for low-resource African languages</h2>
                 <h3>The Cultural Context Crisis</h3>
                 <p>When AI systems are primarily trained on English data from Western contexts, they miss the nuanced ways different cultures think, reason, and communicate. For instance, the concept of family responsibility varies dramatically between Western individualistic societies and African communal cultures. An AI trained primarily on Western data might completely misunderstand why "making my parents proud" is a central life goal in many African cultures.</p>
 
                 <h3>The Current State of AI in African Languages</h3>
                 <p>Existing approaches to solve this problem fall into two categories, both with serious limitations:</p>
                 <p><strong>Prompting Techniques:</strong> Researchers try to use clever prompts to make AI systems think like specific cultures. While this sounds promising, it's like asking someone who only speaks English to suddenly understand Yoruba cultural nuances—the underlying knowledge just isn't there.</p>
-                <p><strong>Custom Training:</strong> Building AI models from scratch with more African data. This works but requires massive computational resources and datasets that often scarce for low-resource languages.</p>
+                <p><strong>Custom Training:</strong> Building AI models from scratch with more African data. This works but requires massive computational resources and datasets that are often scarce for low-resource languages.</p>
 
                 <h3>What We Set Out to Discover</h3>
                 <p>Our research tackled a fundamental question: Can we efficiently teach existing AI models to understand and respect African cultural values without requiring massive resources? We focused on 17 African cultures and languages, including Hausa, Yoruba, Amharic, Swahili, Zulu, and many others.</p>
 
                 <h3>Our Novel Idea: Teaching AI to Think with Cultural Reasoning</h3>
                 <p>We started with the World Values Survey (WVS)—a massive international research program that has been studying human values across cultures since 1981. This survey covers 120 societies worldwide and tracks beliefs, values, and norms across social, political, economic, and religious dimensions. Think of it as a cultural DNA database for humanity.</p>
-                <p>From this rich dataset, we manually selected 122 questions covering topics like family values, work ethics, religious beliefs, and political views—areas where African and Western perspectives often differ significantly.</p>
+                <p>From this rich dataset, we manually selected 122 questions covering topics like family values, work ethic, religious beliefs, and political views—areas where African and Western perspectives often differ significantly.</p>
 
                 <h3>Adding Cultural Reasoning to Outputs</h3>
                 <p>Previous approaches would take a question like "Do you agree that making your parents proud should be a main life goal?" and simply generate variations of the same question with an output like "1. agree" But that misses the WHY behind cultural responses.</p>
