Update blog post on culturally aware AI to enhance clarity by renaming section from "Task-Specific Comparison" to "Effectiveness of Cultural Reasoning".

--- a/blog-post-building-culturally-aware-ai.html
+++ b/blog-post-building-culturally-aware-ai.html
@@ -120,7 +120,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                 </ul>
                 <img src="images/performance_change.png" alt="Performance change across models after cultural fine-tuning">
 
-                <h3>Task-Specific Comparison: Reasoning vs No Reasoning</h3>
+                <h3>Effectiveness of Cultural Reasoning: Reasoning vs No Reasoning</h3>
                 <table>
                   <thead>
                     <tr>
