--- a/blog-post-building-culturally-aware-ai.html.html
+++ b/blog-post-building-culturally-aware-ai.html.html
@@ -39,6 +39,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       <a href="research.html" class="nav-link">Research</a>
     </li>
     <li>
+      <a href="experience.html" class="nav-link">Experience</a>
+    </li>
+    <li>
       <a href="achievements.html" class="nav-link">Achievements</a>
     </li>
     <li>
