--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       <a href="research.html" class="nav-link">Research</a>
     </li>
     <li>
+      <a href="experience.html" class="nav-link">Experience</a>
+    </li>
+    <li>
       <a href="achievements.html" class="nav-link">Achievements</a>
     </li>
     <li>
@@ -73,9 +76,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     <div class = "content-wrapper">   
         <section class="intro-section fade-in">
             <div class="intro-content">
-                <h1> Building AI Systems that Empowers Every Person</h1>
+                <h1>Building the Tools and Communities that Empower AI Builders</h1>
                 <p class="intro-text">
-                  London-based technical staff at ACI.dev, engineering fine-tuning systems and building AI infrastructure from MCP protocols to AI agents and RAG pipelines, while helping grow the global AI developer community globally.</p>
+                  4x hackathon winner and creator of PixelPanel, featured in ElevenLabs showcase. Judge, speaker, and panelist at 9+ AI events across London, Berlin, Paris, Stockholm, and Warsaw – helping 1,000+ builders ship production AI.</p>
                   <div class="button-container">
                     <a href="https://github.com/JamieOgundiran" class="feature-button github-button">
                       <div class="icon-container">
@@ -98,6 +101,20 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
             <h1> <span class = "orange-highlight">RECENT</span> <br>PROJECTS</h1>
             <div class="projects-grid" id="projects-grid">
                 <!-- Projects will be loaded dynamically from JSON -->
+            </div>
+        </section>
+
+        <section class="experience-section fade-in">
+            <h1> <span class = "orange-highlight">WORK</span> <br>EXPERIENCE</h1>
+            <div class="experience-list" id="experience-list">
+                <!-- Work experience will be loaded dynamically from JSON -->
+            </div>
+        </section>
+
+        <section class="education-section fade-in">
+            <h1> <span class = "orange-highlight">EDU</span><br>CATION</h1>
+            <div class="experience-list" id="education-list">
+                <!-- Education will be loaded dynamically from JSON -->
             </div>
         </section>
 
