--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,9 @@
           <a href="research.html" class="nav-link">Research</a>
         </li>
         <li>
+          <a href="experience.html" class="nav-link">Experience</a>
+        </li>
+        <li>
           <a href="achievements.html" class="nav-link">Achievements</a>
         </li>
         <li>
