--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         </section>
 
         <section class="education-section fade-in">
-            <h1> <span class = "orange-highlight">EDU</span><br>CATION</h1>
+            <h1> <span class = "orange-highlight">MY</span><br>EDUCATION</h1>
             <div class="experience-list" id="education-list">
                 <!-- Education will be loaded dynamically from JSON -->
             </div>
